kantin-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-kantin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-api
        image: viviags/kantin-backend:latest
        # --- TAMBAHAN MODUL 2 ---
        resources:
          limits:
            memory: "256Mi" # Batas maksimal RAM
            cpu: "500m"     # Batas maksimal CPU (0.5 core)
        livenessProbe:      # Mengecek apakah aplikasi hang
          httpGet:
            path: /api/info
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:     # Mengecek apakah aplikasi siap terima traffic
          httpGet:
            path: /api/info
            port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-kantin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-ui
        image: viviags/kantin-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
