kantin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kantin-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api # Semua traffic ke /api masuk ke Backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /    # Traffic utama masuk ke Frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
